coding my way to make figure out things

--- a/index.html
+++ b/index.html
@@ -3,16 +3,77 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <title>Weather Dash Board</title>
     <link
-      rel="stylesheet"
+        rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <script>
+      src = "style.css";
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  </head>
+  <body>
+    <!-- nabar for title -->
+    <nav class="navbar-fluid fixed-top bg-dark">
+      <h1>Weather Dashboard</h1>
+    </nav>
+    <br>
+    <br>
+     <br>
+     <div class="container">
+      <div class="row">
+        <div class="col-3">
+        <label id="cityInput"> <label for="cityInput"></label><h3>Search for a City:</h3></label>
+         <!-- capturing the serach term -->
+        <!-- <input class="form-control" type="text" id="cityInput"> -->
+         <!-- <button class="btn btn-primary fas fa-search" id="city-submit" value="city Search"></button> -->
+          <!-- list of searched cities -->
+         <article class="col" id="city-list"></article>
+          <class class="card" style="width: 13rem;">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"></li>
+              <li class="list-group-item"></li>
+              <li class="list-group-item"></li>
+              <li class="list-group-item"></li>
+              <li class="list-group-item"></li>
+               <li class="list-group-item"></li>
+              <li class="list-group-item"></li>
+              <li class="list-group-item"></li>
+            </ul>
+            </class>
+        </div>
+    <!--For handling the search parameters -->
+     <div class="col-9">
+        <div class="cityName"></div>
+        <div class="windSpeed"></div>
+        <div class="humidity"></div>
+        <div class="cityTemp"></div>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-4">Fluid jumbotron</h1>
+              <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            </div>
+          </div> 
+      </div>
+      <div class="col-sm-9">
+        <br />
+        <div class="card">
+          <!-- <div class="card-header"> -->
+              <label for="fiveDay"><h3>5-Day Forecast:</h3></label>
+            <strong> <i class="fa fa-table"></i> </strong>
+          </div>
+  
+        </div>
+      </div>
+    </div>
+    </div>
+    </div>
+    <!-- For displaying 5-day weather results -->
+        
+
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -29,5 +90,6 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
