--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
      <div class="container">
       <div class="row">
         <div class="col-3">
-        <label id="cityInput"> <label for="cityInput"></label><h3>Search for a City:</h3></label>
+        <label for="cityInput"><h3>Search for a City:</h3></label>
+
          <!-- capturing the serach term -->
-        <!-- <input class="form-control" type="text" id="cityInput"> -->
-         <!-- <button class="btn btn-primary fas fa-search" id="city-submit" value="city Search"></button> -->
+        <input class="form-control" type="text" id="cityInput">
+         <button class="btn btn-primary fas fa-search" id="city-submit" value="city Search">Search</button>
           <!-- list of searched cities -->
          <article class="col" id="city-list"></article>
           <class class="card" style="width: 13rem;">
@@ -53,8 +54,8 @@
         <div class="cityTemp"></div>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h1 class="display-4">Fluid jumbotron</h1>
-              <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+              <h1 class="display-4">Atlanta (08/19/2020)</h1>
+              <p class="lead">Temperature</p>
             </div>
           </div> 
       </div>
@@ -75,11 +76,7 @@
         
 
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
