--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
           <div class="jumbotron jumbotron-fluid">
             <div class="container">
               <h1 class="display" id="currentCity"></h1>
-              <p class="lead">Temperature</p>
+              <p class="lead" id="temp"></p>Temperature:</p>
+              <p class="lead" id="humidity"></p>Humidity:</p>
+              <p class="lead" id="wind"></p>Wind Speed:</p>
+              <p class="lead" id="uv"></p>UV Index:</p>
               <div class="col-sm-12">
                 <div class="card">
                   <!-- <div class="card-header"> -->
